# Road-Archiver

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  settings.toml
alembic/: env.py
alembic/versions/: ccb1cea37819_add_role_column_to_users.py
app/: .dockerignore  Dockerfile  main.py  schemas.py
app/api/: __init__.py
app/api/v1/endpoints/: authentication.py  road_networks.py  users.py
app/api/v1/services/: authentication_service.py  road_network_service.py  users_service.py
app/core/: config.py  database.py  security.py
app/db/: models.py
app/templates/: homepage.html
docs/: openapi.json  swagger.yaml
tests/: .env  conftest.py  docker-compose.test.yml  test_api.py
tests/test_data/: Bradford_Public_Paths.geojson  York_cycle_network.geojson
