[tool.poetry]
name = "submission-by-chrysovalantis-chatzimagkas"
version = "0.1.0"
description = "Backend API for geospatial submission system"
authors = ["Valantis Chatzimagkas <valantis.hatzimagkas@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
repository = "https://github.com/ValantisChatzimagkas/submission-by-chrysovalantis-chatzimagkas"
license = "MIT"
keywords = ["fastapi", "postgresql", "geoalchemy", "docker", "submission-system"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.40,<3.0.0"
aiofiles = ">=24.1.0,<25.0.0"
pyjwt = ">=2.10.1,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"
alembic = ">=1.15.2,<2.0.0"
shapely = ">=2.1.0,<3.0.0"
geoalchemy2 = ">=0.17.1,<0.18.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pyyaml = ">=6.0,<7.0"
uvicorn = ">=0.27.1,<1.0.0"
pydantic-settings = "2.2.1"
email-validator = "^2.1"
python-multipart = "^0.0.9"
jinja2 = "^3.1"
pre-commit = "3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-docker = ">=3.2.1,<4.0.0"
ruff = ">=0.11.11,<0.12.0"
black = "^24.0"
mypy = "^1.9"
lxml = "^5.4.0"
httpx = ">=0.27.0,<1.0.0"
pre-commit = "^3.7.0"

[tool.poetry.scripts]
start = "app.main:main"
test = "pytest"
lint = "ruff:__main__.main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "UP", "SIM", "N"]
fix = true
